--- a/src/app/shared/chart/chart.component.html
+++ b/src/app/shared/chart/chart.component.html
@@ -1,5 +1,5 @@
 <div>
-  <canvas baseChart [chartType]="chart.type" [data]="chart.data" [labels]="chart.labels" [options]="chart.options"
+  <canvas baseChart [chartType]="type" [data]="chart.data" [labels]="chart.labels" [options]="chart.options"
     [legend]="true" [colors]="chart.colors">
   </canvas>
 </div>
