--- a/src/app/shared/chart/chart.component.html
+++ b/src/app/shared/chart/chart.component.html
@@ -1,5 +1,5 @@
 <div>
-  <canvas baseChart [chartType]="type" [data]="chart.data" [labels]="chart.labels" [options]="chart.options"
-    [legend]="true" [colors]="chart.colors">
+  <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType"
+    [options]="pieChartOptions" [colors]="pieChartColors" [legend]="pieChartLegend">
   </canvas>
 </div>
