--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
         <mat-tab label="NoSql">
             <app-nosql></app-nosql>
         </mat-tab>
-        <mat-tab label="Sql"> SQL </mat-tab>
+        <mat-tab label="Sql">
+            <app-mysql></app-mysql>
+        </mat-tab>
     </mat-tab-group>
 </div>
